5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1758_2390.log
== SUBMITION (2019-05-29 22:22:50) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("x: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes+=1
	i+=1
print(mes)
	
-- EXECUTION TIME:
0.211759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:22:51) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("x: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes+=1
	i+=1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:23:20) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("x: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes+=1
	i+=1
print(mes)
	
-- EXECUTION TIME:
0.168501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:23:21) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("x: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes+=1
	i+=1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:23:49) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes+=1
	i+=1
print(mes)
	
-- EXECUTION TIME:
0.13911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:23:50) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes+=1
	i+=1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:24:39) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
0.18201
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/2390/main.py", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:24:40) 
-- CODE:
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v1=array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 22:25:03) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 22:25:05) 
-- CODE:
from numpy import*
v1=array(eval(input("x: ")))
v2=array(eval(input("y: ")))

a=max
i=0
mes=1
while(v1[i]!=max(v1)):
	mes=mes+1
	i=i+1
print(mes)
	
-- EXECUTION TIME:
0.440313
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
